# MusicPlayer-FirstVersion

./: .gitignore  CMakeLists.txt  main.cpp
controller/: Controller.cpp  Controller.h
model/: Model.cpp  Model.h  Song.cpp  Song.h  Sorting.cpp  Sorting.h
view/: View.cpp  View.h
